--- a/src/app/All/navbar/navbar.component.html
+++ b/src/app/All/navbar/navbar.component.html
@@ -117,7 +117,9 @@
             </div>
 
             <div class="form-group">
-              <button type="submit"  data-dismiss="dismiss" class="btn btn-warning btn-connex">Se
+              <button type="submit"  
+              data-dismiss="mod" 
+              class="btn btn-warning btn-connex">Se
                 connecter </button>
             </div>
           </form>
