--- a/src/app/Sign-up/my-account/adresses/adresses.component.html
+++ b/src/app/Sign-up/my-account/adresses/adresses.component.html
@@ -84,6 +84,11 @@
                 </div>
               </div>
             </div>
+            <div *ngIf="submitted" class="form-group row">
+                <div class="col-md-6 offset-md-3">
+                <p>Mise à jour effectuée</p>
+              </div>
+            </div>
         <div>
             <button type="submit" class="btn btn-warning text-white mb-2">Valider</button>
         </div>
