--- a/src/app/Sign-up/my-account/motdepasse/motdepasse.component.html
+++ b/src/app/Sign-up/my-account/motdepasse/motdepasse.component.html
@@ -79,6 +79,11 @@
                 <input type="password" class="form-control" id="nom" />
               </div>
           </div> -->
+          <div *ngIf="submitted" class="form-group row">
+              <div class="col-md-6 offset-md-3">
+              <p>Mise à jour effectuée</p>
+            </div>
+          </div>
           <div>
               <button type="submit" class="btn btn-warning text-white  mb-2">Validez</button>
           </div>
