--- a/src/app/Sign-up/my-account/my-account.component.html
+++ b/src/app/Sign-up/my-account/my-account.component.html
@@ -14,6 +14,9 @@
   <a routerLink="/myaccount/adresses" (click)="getAdresses()">
   <p [ngClass]="{'lien-menu':adresses, 'lien-menu-active':!adresses}">Commandes</p>
   </a>
+<a *ngIf="buyerService.getAuthenticatedRole() == 'ROLE_ADMIN'" routerLink="/admin-home">
+<p [ngClass]="{'lien-menu':adresses, 'lien-menu-active':!adresses}">Retour Console Admin</p>
+</a>
   </div>
   
   <div class= "col-12 d-flex justify-content-center d-md-none mt-5 ">
