--- a/src/app/Seller/page-announce-pro/tab-creation/tab-creation.component.css
+++ b/src/app/Seller/page-announce-pro/tab-creation/tab-creation.component.css
@@ -62,3 +62,26 @@ pre {
     background-color: black;
     color: white;
 }
+
+.sectionBtn {
+    background-color: black;
+    color: white;
+    font-weight: bold;
+}
+
+.subsectionBtn {
+    background-color: grey;
+    color: white;
+    margin: auto;
+}
+
+.material-icons {
+    vertical-align: text-top;
+}
+
+.buttonAspect{
+    border-radius: 5px;
+    background-color: darkgrey;
+    text-align:center;
+    margin-bottom: 0.5vh;
+}
