--- a/src/app/Buyer/categories/sous-categories/sous-categories.component.html
+++ b/src/app/Buyer/categories/sous-categories/sous-categories.component.html
@@ -1,10 +1,10 @@
 <div class="bikeSubscetionContainer">
   <div *ngFor="let sousCategories of categories.sousCategories; let index=index">
     <li *ngIf="sousCategories.sousSousCategories" class="list-group-item list-group-item-action arrowHead" (click)="collapse(index+overIndex)">
-      <button mat-button routerLink="">{{sousCategories.name}}</button>
+      {{sousCategories.name}}
     </li>
     <li *ngIf="sousCategories.sousSousCategories==undefined" class="list-group-item list-group-item-action" (click)="collapse(index+overIndex)">
-      <button mat-button routerLink="">{{sousCategories.name}}</button>
+      {{sousCategories.name}}
     </li>
     <app-sous-sous-categories id="list{{index+overIndex}}" class="list" [sousCategories]="sousCategories"></app-sous-sous-categories>
   </div>
