--- a/src/app/PageAdmin/admin-buyer-list/admin-buyer-list.component.html
+++ b/src/app/PageAdmin/admin-buyer-list/admin-buyer-list.component.html
@@ -41,7 +41,7 @@
               <a (click)="edit(buyer.username)"><i class="material-icons">edit</i></a>
             </td>
             <td>
-              <i class="material-icons">delete_sweep</i>
+                <a (click)="delete(buyer.username)"><i class="material-icons">delete_sweep</i></a>
             </td>
           </tr>
         </ng-container>
