--- a/src/app/Seller/page-announce-pro/page-announce-pro.component.html
+++ b/src/app/Seller/page-announce-pro/page-announce-pro.component.html
@@ -1,6 +1,6 @@
 <app-navbar></app-navbar>
 <div class="container">
-  <!-- <div class="row mt-5">
+  <div class="row mt-5">
     <div class="col-lg-12">
       <ngb-tabset>
         <ngb-tab title="Création annonce">
@@ -19,11 +19,5 @@
         </ngb-tab>
       </ngb-tabset>
     </div>
-  </div> -->
-
-  <mat-tab-group animationDuration="0ms" [color]="red">
-    <mat-tab label="Création annonce"><app-tab-creation></app-tab-creation></mat-tab>
-    <mat-tab label="Mes annonces"><app-tab-announce></app-tab-announce></mat-tab>
-    <mat-tab label="Historique">Cay pas fé</mat-tab>
-  </mat-tab-group>
+  </div>
 </div>
