--- a/src/app/PageAdmin/admin-company-edit/admin-company-edit.component.html
+++ b/src/app/PageAdmin/admin-company-edit/admin-company-edit.component.html
@@ -160,7 +160,7 @@
       </div>
     </div>
     <div>
-      <button (click)="returnList()" type="submit" class="btn btn-warning mb-2">
+      <button type="submit" class="btn btn-warning mb-2">
         Modifier Compte
       </button>
     </div>
