--- a/src/app/PageAdmin/admin-company-list/admin-company-list.component.html
+++ b/src/app/PageAdmin/admin-company-list/admin-company-list.component.html
@@ -47,7 +47,7 @@
             <a (click)="edit(seller)"><i class="material-icons icons">edit</i></a>
           </th>
           <th>
-            <i class="material-icons">delete_sweep</i>
+            <i class="material-icons icons">delete_sweep</i>
           </th>
         </tr>
       </ng-container>
