--- a/src/app/Buyer/announce-list/announce-list.component.html
+++ b/src/app/Buyer/announce-list/announce-list.component.html
@@ -1,5 +1,5 @@
 
   <div class="row announceContainer">
-        <app-announce-item class="col-12" *ngFor="let placeholderForDBAnnounce of placeholderForDBListOfAnnounces.results"
-              [placeholderForDBAnnounce]="placeholderForDBAnnounce"></app-announce-item>
+        <app-announce-item class="col-12" *ngFor="let announce of listAnnonces"
+              [announce]="announce"></app-announce-item>
   </div>
