--- a/src/app/Seller/page-announce-pro/tab-announce/tab-announce.component.html
+++ b/src/app/Seller/page-announce-pro/tab-announce/tab-announce.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row">
         <app-announce-item class="col-12" *ngFor="let placeholderForDBAnnounce of placeholderForDBListOfAnnounces.results"
-            [placeholderForDBAnnounce]="placeholderForDBAnnounce"></app-announce-item>      
+            [announce]="placeholderForDBAnnounce"></app-announce-item>      
     </div>
 </div>
