--- a/src/app/PageAdmin/admin-buyer-list/admin-buyer-list.component.html
+++ b/src/app/PageAdmin/admin-buyer-list/admin-buyer-list.component.html
@@ -38,10 +38,10 @@
               {{buyer.ville}}
             </td>
             <td>
-              <a (click)="edit(buyer.username)"><i class="material-icons">edit</i></a>
+              <a (click)="edit(buyer.username)"><i class="material-icons icons">edit</i></a>
             </td>
             <td>
-                <a (click)="delete(buyer.username)"><i class="material-icons">delete_sweep</i></a>
+                <a (click)="delete(buyer.username)"><i class="material-icons icons">delete_sweep</i></a>
             </td>
           </tr>
         </ng-container>
