--- a/src/app/Buyer/announce-item/announce-item.component.html
+++ b/src/app/Buyer/announce-item/announce-item.component.html
@@ -37,9 +37,9 @@
         <div class="price">
           {{announce.price}}€
         </div>
-        <div class="btn btn-warning">
+        <button class="btn btn-warning"  (click)="detailAnnonce(index)">
           Voir
-        </div>
+        </button>
       </div>
 
     </div>
