Btn see announce for seller in admin done

--- a/src/app/PageAdmin/admin-announce-list/admin-announce-list.component.css
+++ b/src/app/PageAdmin/admin-announce-list/admin-announce-list.component.css
@@ -7,6 +7,10 @@
     margin: 5vh auto;
 }
 
+.raisonSociale {
+    text-align: center;
+}
+
 /*DEFAULT CSS - MOBILE VERSION  DEFAULT CSS - MOBILE VERSION  DEFAULT CSS - MOBILE VERSION  DEFAULT CSS - MOBILE VERSION*/
 @media (max-width: 576px) {
     .VSviewport {
