--- a/src/app/PageAdmin/admin-announce-list/admin-announce-list.component.css
+++ b/src/app/PageAdmin/admin-announce-list/admin-announce-list.component.css
@@ -11,6 +11,10 @@
     text-align: center;
 }
 
+.icons {
+    cursor: pointer;
+}
+
 /*DEFAULT CSS - MOBILE VERSION  DEFAULT CSS - MOBILE VERSION  DEFAULT CSS - MOBILE VERSION  DEFAULT CSS - MOBILE VERSION*/
 @media (max-width: 576px) {
     .VSviewport {
