--- a/src/app/PageAdmin/admin-announce-list/admin-announce-list.component.html
+++ b/src/app/PageAdmin/admin-announce-list/admin-announce-list.component.html
@@ -21,7 +21,7 @@
             </th>
           </tr>
         </thead>
-        <ng-container *cdkVirtualFor="let announce of announces">
+        <ng-container *cdkVirtualFor="let announce of announces, let idefix = index">
           <tr>
             <td>
               {{announce.pieceName}}
@@ -36,7 +36,7 @@
               <i class="material-icons icons">delete_sweep</i>
             </td>
             <td>
-              <a (click)="details(id)"><i class="material-icons icons">remove_red_eye</i></a>
+              <a (click)="details(idefix)"><i class="material-icons icons">remove_red_eye</i></a>
             </td>
           </tr>
         </ng-container>
