ajout logo avec titre + double arrow

--- a/src/app/Buyer/home-background/home-background.component.html
+++ b/src/app/Buyer/home-background/home-background.component.html
@@ -1,5 +1,5 @@
 <div class="aPageSize" id="aPageSize">
-    <img class="backgroundLogo" src="../../../assets/ADP_symbole_logo_noir.png" alt="no image">
+    <img class="backgroundLogo" src="../../../assets/ADP_logo_noir.png" alt="no image">
   <img class="backgroundImage" name="backgroundImage" id="logoBackground" src="../../../assets/home_bg.png" alt="no background">
-  <button id="closeButton" type="button" class="closeButton" (click)="scrollBackground()"><img class="img" src="../../assets/down-arrow.png" alt=""></button>
+  <button id="closeButton" type="button" class="closeButton" (click)="scrollBackground()"><img class="img" src="../../assets/double-arrow1.png" alt=""></button>
 </div>
