--- a/src/app/PageAdmin/admin-announce-list/admin-announce-list.component.html
+++ b/src/app/PageAdmin/admin-announce-list/admin-announce-list.component.html
@@ -33,7 +33,7 @@
               En vente
             </td>
             <td>
-              <i class="material-icons icons">delete_sweep</i>
+              <a (click)="delete(announce.id)"><i class="material-icons icons">delete_sweep</i></a>
             </td>
             <td>
               <a (click)="details(idefix)"><i class="material-icons icons">remove_red_eye</i></a>
