--- a/src/app/PageAdmin/admin-company-list/admin-company-list.component.css
+++ b/src/app/PageAdmin/admin-company-list/admin-company-list.component.css
@@ -11,6 +11,10 @@
     cursor: pointer;
 }
 
+.centerContainer {
+    text-align: center;
+}
+
 /*DEFAULT CSS - MOBILE VERSION  DEFAULT CSS - MOBILE VERSION  DEFAULT CSS - MOBILE VERSION  DEFAULT CSS - MOBILE VERSION*/
 @media (max-width: 576px) {
     .VSviewport {
